# trading-bot-lizard-branch

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md
docs/concepts/: phase1_broker_api_konzept.md  phase2_persistence_konzept.md  phase3_external_data_konzept.md  phase4_research_plan_konzept.md  phase5_concept.md
phase1_broker_wrapper/: CLAUDE.md  README.md  lightstreamer_ig_reference.md  lightstreamer_integration_notes.md  pyproject.toml  requirements.txt
phase1_broker_wrapper/broker_wrapper/: __init__.py  cli.py  credentials.py  envelope.py  exceptions.py  factory.py  filters.py  models.py
phase1_broker_wrapper/broker_wrapper/adapters/: __init__.py  base.py  ig_adapter.py
phase1_broker_wrapper/broker_wrapper/streaming/: __init__.py  base.py  ig_lightstreamer.py
phase1_broker_wrapper/scripts/: smoke_test.py  store_credential.py  test_lightstreamer.py
phase1_broker_wrapper/tests/: test_envelope.py  test_filters.py  test_ig_adapter.py  test_lightstreamer.py
phase2_persistence/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
phase2_persistence/migrations/: 001_initial.sql
phase2_persistence/persistence/: __init__.py  db.py  defaults.py  migrations.py  schema.py  state.py  timeutil.py
phase2_persistence/scripts/: init_db.py  live_test.py
phase2_persistence/tests/: conftest.py  test_db.py  test_migrations.py  test_state.py
phase3_external_data/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
phase3_external_data/external_data/: __init__.py  cache.py  exceptions.py  fetcher.py  indicators.py  market_hours.py  models.py  ticker_map.py  timeutil.py
phase3_external_data/scripts/: live_test.py  smoke_test.py
phase3_external_data/tests/: conftest.py  test_cache.py  test_fetcher.py  test_indicators.py  test_market_hours.py  test_package_exports.py  test_ticker_map.py
phase4_research/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
phase4_research/research/: __init__.py  candidate_filter.py  context_builder.py  credentials.py  llm_client.py  models.py  prompt.py  research.py  timeutil.py  token_meter.py  validator.py
phase4_research/scripts/: __init__.py  live_test.py  smoke_test.py  usage_report.py  wiring.py
phase4_research/tests/: conftest.py  test_candidate_filter.py  test_context_builder.py  test_llm_client.py  test_prompt.py  test_research.py  test_token_meter.py  test_usage_report.py  test_validator.py
phase5_execution/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
phase5_execution/execution/: __init__.py  config.py  exceptions.py  execution_state.py  executor.py  gates.py  ig_bot.py  models.py  monitor.py  order.py  protocols.py  sizing.py  vetos.py
phase5_execution/scripts/: __init__.py  live_test.py  seed_candidate.py  smoke_test.py  wiring.py
phase5_execution/tests/: conftest.py  test_config.py  test_execution_state.py  test_executor.py  test_gates.py  test_ig_bot.py  test_models.py  test_monitor.py  test_order.py  test_packaging.py  test_sizing.py  test_vetos.py
scripts/: dev_install.sh
