[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "broker-wrapper"
version = "0.1.0"
description = "Phase 1 — broker API wrapper (IG REST + Envelope contract) for the DAX CFD trading bot."
requires-python = ">=3.11"
# Runtime dependencies stay in requirements.txt (dev workflow). This packaging
# metadata exists only to enable editable installs (`pip install -e`) so that the
# Phase-5 composition root can resolve `import broker_wrapper` without sys.path hacks.

[tool.setuptools.packages.find]
include = ["broker_wrapper*"]
