[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "persistence"
version = "0.1.0"
description = "Phase 2 — persistence layer (SQLite + JSON state) for the DAX CFD trading bot."
requires-python = ">=3.11"
# Runtime dependencies stay in requirements.txt (dev workflow). This packaging
# metadata exists only to enable editable installs (`pip install -e`) so that the
# Phase-5 composition root can resolve `import persistence` without sys.path hacks.

[tool.setuptools.packages.find]
include = ["persistence*"]
